# platzi_rust_backend

./: .env  Cargo.toml  Dockerfile
.github/workflows/: main.yml
migrations/2022-10-01-220855_create_post/: up.sql
src/: main.rs  models.rs  schema.rs
templates/: index.html  post.html
