[package]
name = "blog-platzi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
actix-web = "4"
tera = "1.17.1"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.1"
json = "0.12.4"
